--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="hello_blank_fragment">Under Construction</string>
     <string name="category_name">Category Name</string>
     <string name="recently_played">Yakınlarda Çalınanlar</string>
-    <string name="for_you">Senin için hazırlandı</string>
+    <string name="for_you">Senin için Hazırlandı</string>
     <string name="advice_for_you">Senin için önerilenler</string>
     <string name="ara">Ara</string>
     <string name="spotify_kitapligin">Spotifty Kitaplığın</string>
